Updated validate table function, update project version